--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/react-redux": "^7.1.18",
     "font-awesome": "^4.7.0",
     "react": "^17.0.2",
+    "react-bootstrap-icons": "^1.5.0",
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
     "react-redux": "^7.2.4",
