--- a/package.json
+++ b/package.json
@@ -12,9 +12,6 @@
     "@craco/craco": "^6.2.0",
     "@reduxjs/toolkit": "^1.6.1",
     "@tailwindcss/aspect-ratio": "^0.3.0",
-    "@testing-library/jest-dom": "^5.11.4",
-    "@testing-library/react": "^11.1.0",
-    "@testing-library/user-event": "^12.1.10",
     "aos": "^3.0.0-beta.6",
     "font-awesome": "^4.7.0",
     "react": "^17.0.2",
@@ -25,21 +22,24 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-spring": "^9.2.4",
-    "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
   },
   "devDependencies": {
-    "@types/react-router-dom": "^5.1.8",
-    "@types/tailwindcss": "^2.2.4",
-    "autoprefixer": "^9.8.6",
-    "postcss": "^7.0.36",
-    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.7",
+    "@testing-library/jest-dom": "^5.11.4",
+    "@testing-library/react": "^11.1.0",
+    "@testing-library/user-event": "^12.1.10",
     "@types/aos": "^3.0.4",
     "@types/jest": "^26.0.15",
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
-    "@types/react-redux": "^7.1.18"
+    "@types/react-redux": "^7.1.18",
+    "@types/react-router-dom": "^5.1.8",
+    "@types/tailwindcss": "^2.2.4",
+    "autoprefixer": "^9.8.6",
+    "postcss": "^7.0.36",
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.7",
+    "typescript": "^4.1.2"
   },
   "eslintConfig": {
     "extends": [
